service-operator-resources/httproute.yml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: http-app-1
  namespace: default
  labels:
    app: traefik
spec:
  hostnames:
    - "whoami"
  rules:
    - matches:
        - path:
            type: Exact
            value: /foo
        - headers:
           values:
            h1: v1
      forwardTo:
        - serviceName: whoami
          port: 80
          weight: 1
    - matches:
        - path:
            type: Prefix
            value: /api
        - path:
            type: Prefix
            value: /dashboard
      forwardTo:
        - backendRef:
            group: traefik.containo.us
            kind: TraefikService
            name: api@internal
          port: 80
          weight: 1
